@@ -30,6 +30,7 @@
       if ($msg["FLAG_FLAGGED"] == true) { $flag = "<font color=$color[2]>"; $flag_end = "</font>"; }
       if ($msg["FLAG_SEEN"] == false) { $bold = "<b>"; $bold_end = "</b>"; }
       if ($mailbox == $sent_folder) { $italic = "<i>"; $italic_end = "</i>"; }
+      if ($msg["FLAG_DELETED"]) { $fontstr = "<font color=\"$color[9]\">"; $fontstr_end = "</font>"; }
 
       for ($i=0; $i < count($message_highlight_list); $i++) {
          if (trim($message_highlight_list[$i]["value"]) != "") {
@@ -52,10 +53,10 @@
          $search_stuff = "&where=".urlencode($where)."&what=".urlencode($what);
       }
 
-		if ($checkall == 1) 
-			$checked = " checked";
-		else
-			$checked = "";
+      if ($checkall == 1) 
+         $checked = " checked";
+      else
+         $checked = "";
       
       for ($i=1; $i <= count($index_order); $i++) {
          switch ($index_order[$i]) {
@@ -63,10 +64,10 @@
                echo "   <td width=1% bgcolor=$hlt_color align=center><input type=checkbox name=\"msg[$t]\" value=".$msg["ID"]."$checked></TD>\n";
                break;
             case 2: # from
-               echo "   <td width=30% bgcolor=$hlt_color>$italic$bold$flag$senderName$flag_end$bold_end$italic_end</td>\n";
+               echo "   <td width=30% bgcolor=$hlt_color>$italic$bold$flag$fontstr$senderName$fontstr_end$flag_end$bold_end$italic_end</td>\n";
                break;
             case 3: # date
-               echo "   <td nowrap width=1% bgcolor=$hlt_color><center>$bold$flag".$msg["DATE_STRING"]."$flag_end$bold_end</center></td>\n";
+               echo "   <td nowrap width=1% bgcolor=$hlt_color><center>$bold$flag$fontstr".$msg["DATE_STRING"]."$fontstr_end$flag_end$bold_end</center></td>\n";
                break;
             case 4: # subject
                echo "   <td bgcolor=$hlt_color>$bold<a href=\"read_body.php?mailbox=$urlMailbox&passed_id=".$msg["ID"]."&startMessage=$startMessage&show_more=0$search_stuff\">$flag$subject$flag_end</a>$bold_end</td>\n";
@@ -95,7 +96,7 @@
                echo "</small></b></td>\n";
                break;
             case 6: # size
-               echo "   <td bgcolor=$hlt_color width=1%>$bold".show_readable_size($msg['SIZE'])."$bold_end</td>\n";
+               echo "   <td bgcolor=$hlt_color width=1%>$bold$fontstr".show_readable_size($msg['SIZE'])."$fontstr_end$bold_end</td>\n";
                break;
          }
       }
@@ -113,7 +114,7 @@
       global $message_highlight_list;
       global $auto_expunge;
 
-	  if ($auto_expunge == true) sqimap_mailbox_expunge($imapConnection, $mailbox, false);
+     if ($auto_expunge == true) sqimap_mailbox_expunge($imapConnection, $mailbox, false);
       sqimap_mailbox_select($imapConnection, $mailbox);
 
       if (!$use_cache) {
@@ -395,16 +396,16 @@
       echo "</td></tr>\n";
 
       echo "<TR BGCOLOR=\"$color[4]\"><TD>";
-		echo "<table width=100% cellpadding=0 cellspacing=0 border=0><tr><td>";
-		echo "$More</td><td align=right>\n";
-		if (!$startMessage) $startMessage=1;
+      echo "<table width=100% cellpadding=0 cellspacing=0 border=0><tr><td>";
+      echo "$More</td><td align=right>\n";
+      if (!$startMessage) $startMessage=1;
       if ( $checkall == "1")
          echo "\n<A HREF=\"right_main.php?mailbox=$mailbox&startMessage=$real_startMessage&sort=$sort\">" . _("Unselect All") . "</A>\n";
       else
          echo "\n<A HREF=\"right_main.php?mailbox=$mailbox&startMessage=$real_startMessage&sort=$sort&checkall=1\">" . _("Select All") . "</A>\n";
 
-		echo "</td></tr></table>";
-		echo "</td></tr>";
+      echo "</td></tr></table>";
+      echo "</td></tr>";
       echo "</table>"; /** End of message-list table */
 
       do_hook("mailbox_index_after");
@@ -422,8 +423,8 @@
        $mailbox = '', $sort = -1, $Message = '', $More = '', $startMessage = 1)
    {
       global $color, $index_order, $auto_expunge, $move_to_trash;
-		global $checkall;
-		$urlMailbox = urlencode($mailbox);
+      global $checkall;
+      $urlMailbox = urlencode($mailbox);
 
          /** This is the beginning of the message list table.  It wraps around all messages */
       echo "<TABLE WIDTH=100% BORDER=0 CELLPADDING=2 CELLSPACING=0>";
@@ -434,15 +435,15 @@
       }
 
       echo "<TR BGCOLOR=\"$color[4]\"><TD>";
-		echo "<table width=100% cellpadding=0 cellspacing=0 border=0><tr><td>";
-		echo "$More</td><td align=right>\n";
+      echo "<table width=100% cellpadding=0 cellspacing=0 border=0><tr><td>";
+      echo "$More</td><td align=right>\n";
       if ( $checkall == "1")
          echo "\n<A HREF=\"right_main.php?mailbox=$mailbox&startMessage=$startMessage&sort=$sort\">" . _("Unselect All") . "</A>\n";
       else
          echo "\n<A HREF=\"right_main.php?mailbox=$mailbox&startMessage=$startMessage&sort=$sort&checkall=1\">" . _("Select All") . "</A>\n";
 
-		echo "</td></tr></table>";
-		echo "</td></tr>";
+      echo "</td></tr></table>";
+      echo "</td></tr>";
 
       /** The delete and move options */
       echo "<TR><TD BGCOLOR=\"$color[0]\">";
@@ -507,7 +508,7 @@
                   echo "   <A HREF=\"right_main.php?newsort=2&startMessage=1&mailbox=$urlMailbox\" TARGET=\"right\"><IMG SRC=\"../images/down_pointer.gif\" BORDER=0></A></TD>\n";
                elseif ($sort != -1)
                   echo "   <A HREF=\"right_main.php?newsort=3&startMessage=1&mailbox=$urlMailbox\" TARGET=\"right\"><IMG SRC=\"../images/sort_none.gif\" BORDER=0></A></TD>\n";
-					echo "</TD>";
+               echo "</TD>";
                break;
                
             case 3: # date
@@ -520,7 +521,7 @@
                   echo "   <A HREF=\"right_main.php?newsort=0&startMessage=1&mailbox=$urlMailbox\" TARGET=\"right\"><IMG SRC=\"../images/sort_none.gif\" BORDER=0></A></TD>\n";
                elseif ($sort != -1)
                   echo "   <A HREF=\"right_main.php?newsort=0&startMessage=1&mailbox=$urlMailbox\" TARGET=\"right\"><IMG SRC=\"../images/sort_none.gif\" BORDER=0></A></TD>\n";
-					echo "</TD>";
+               echo "</TD>";
                break;
                
             case 4: # subject
@@ -531,7 +532,7 @@
                   echo "   <A HREF=\"right_main.php?newsort=4&startMessage=1&mailbox=$urlMailbox\" TARGET=\"right\"><IMG SRC=\"../images/down_pointer.gif\" BORDER=0></A></TD>\n";
                elseif ($sort != -1)
                   echo "   <A HREF=\"right_main.php?newsort=5&startMessage=1&mailbox=$urlMailbox\" TARGET=\"right\"><IMG SRC=\"../images/sort_none.gif\" BORDER=0></A></TD>\n";
-					echo "</TD>";
+               echo "</TD>";
                break;
                
             case 6: # size   
